--- a/cinnamon/bootloaders/isolinux/live.cfg
+++ b/cinnamon/bootloaders/isolinux/live.cfg
@@ -18,7 +18,7 @@ LABEL English
 	append boot=live components username=mauna hostname=mauna splash quiet
 
 MENU begin advanced
-MENU title Mauna with Localisation Support
+MENU title Other Languages
   say "Booting Afrikaans (af)..."
   linux /live/vmlinuz
   append initrd=/live/initrd.img boot=live components username=mauna hostname=mauna locales=af_ZA.UTF-8 keyboard-layouts=za quiet splash
