--- a/lxqt/bootloaders/boot/grub/grub.cfg
+++ b/lxqt/bootloaders/boot/grub/grub.cfg
@@ -32,7 +32,7 @@ menuentry "Mauna - Live English" {
 	linux	/live/vmlinuz boot=live components username=mauna hostname=mauna quiet splash
 	initrd	/live/initrd.img
 }
-submenu "Mauna - Live with Localisation Support" {
+submenu "Other Languages" {
 menuentry "Afrikaans (af)" {
   linux  /live/vmlinuz boot=live components username=mauna hostname=mauna locales=af_ZA.UTF-8 keyboard-layouts=za quiet splash
   initrd /live/initrd.img
